--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -12,3 +12,5 @@ sources:
         description: Users table
       - name: products
         description: Products table
+      - name: order_items
+        description: Order items table (order detail)
